fix: fix z-index

--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -11,6 +11,7 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 1;
 
   @include breakpoint-up(large) {
     padding: 2.25rem 3.375rem;
